--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/Style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="headerWrap">
@@ -17,18 +19,20 @@
                 </div>
                 <input id="menu-toggle" type="checkbox" />
                 <label class='menu-button-container' for="menu-toggle">
-                <div class='menu-button'></div>
-              </label>
+                    <div class='menu-button'></div>
+                </label>
                 <ul class="menu">
-                  <li><a href="#">Presets</a></li>
-                  <li><a href="#">Prints</a></li>
-                  <li><a href="#">Store</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
-                  <li class="card-wrap"><div class="cart__href_before"></div><a href="#" class="cart__href">Cart</a><div class="cart__count"><span>0</span></div>
-                        </li>
+                    <li><a href="#">Presets</a></li>
+                    <li><a href="#">Prints</a></li>
+                    <li><a href="#">Store</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li class="card-wrap">
+                        <div class="cart__href_before"></div><a href="#" class="cart__href">Cart</a>
+                        <div class="cart__count"><span>0</span></div>
+                    </li>
                 </ul>
-              </section>
+            </section>
         </div>
     </header>
     <main class="main">
@@ -39,15 +43,18 @@
                 <div class="introWrap">
                     <div class="introRight">
                         <img class="introRight_img" src="/img/James.png" alt="photographer">
-                            </div>
+                    </div>
                     <div class="introLeft">
-                    <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
-                    <p class="introLeft__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                    <div class="introLeft__a"><a href="#">Read more</a></div>
-                            </div>           
-            </div> 
-        </div>
-            
+                        <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
+                        <p class="introLeft__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                            varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor
+                            interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id
+                            rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        <div class="introLeft__a"><a href="#">Read more</a></div>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <section class="services">
             <div class="gradientServices_1"></div>
@@ -55,88 +62,105 @@
                 <div class="servicesIntroWrap">
                     <span class="servicesIntroWrap__wave"></span>
                     <h3 class="servicesIntroWrap__h3">Services</h3>
-                    <p class="servicesIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
+                    <p class="servicesIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
+                        varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor
+                        interdum nulla.</p>
                 </div>
                 <div class="servicesGridWrap">
                     <div class="servicesGridWrap__div1 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Wedding Photography</h4>
-                        <p class="p_cell_p">Wedding photography is often called the bread and butter of photographers — but that doesn't mean it has to be boring. Quite the opposite!</p>
+                        <p class="p_cell_p">Wedding photography is often called the bread and butter of photographers —
+                            but that doesn't mean it has to be boring. Quite the opposite!</p>
                         <span class="s_cell_btn"><a href="#" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div2 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Sports Photography</h4>
-                        <p class="p_cell_p">Sports photography is awesome. Sitting on the sidelines with a massive telephoto allows me to get right into the action — I love shooting sports where there's a lot of explosive movement.</p>
+                        <p class="p_cell_p">Sports photography is awesome. Sitting on the sidelines with a massive
+                            telephoto allows me to get right into the action — I love shooting sports where there's a
+                            lot of explosive movement.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div3 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Portrait Photography</h4>
-                        <p class="p_cell_p">Who doesn't love portrait photography? I love being able to capture that expression, quirk, smile or whatever, that sort of defines a person.</p>
+                        <p class="p_cell_p">Who doesn't love portrait photography? I love being able to capture that
+                            expression, quirk, smile or whatever, that sort of defines a person.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div4 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Architecture Photography</h4>
-                        <p class="p_cell_p">The nice thing about shooting architecture (in my opinion) is that it's so easy to do. Seriously, just pick up your camera and get out there.</p>
+                        <p class="p_cell_p">The nice thing about shooting architecture (in my opinion) is that it's so
+                            easy to do. Seriously, just pick up your camera and get out there.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div5 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Animal Photography</h4>
-                        <p class="p_cell_p">Whenever I'm travelling I always make sure to pack gear that allows me to capture the local wildlife. The eagle that takes flight in this picture is probably my most prized image.</p>
+                        <p class="p_cell_p">Whenever I'm travelling I always make sure to pack gear that allows me to
+                            capture the local wildlife. The eagle that takes flight in this picture is probably my most
+                            prized image.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div6 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Food Photography</h4>
-                        <p class="p_cell_p">I do food photography for blogs, restaurants, influencers, YouTube channels — but most importantly (if I manage to cook something that looks good) — I do food photography for myself.</p>
+                        <p class="p_cell_p">I do food photography for blogs, restaurants, influencers, YouTube channels
+                            — but most importantly (if I manage to cook something that looks good) — I do food
+                            photography for myself.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                     <div class="servicesGridWrap__div7 s_cell">
                         <span class="s_cell_img"></span>
                         <h4 class="s_cell_h4">Nature Photography</h4>
-                        <p class="p_cell_p">Landscape photography just never gets old. Someone told me that those are the kinds of pictures you never look. Well, I don't agree.</p>
+                        <p class="p_cell_p">Landscape photography just never gets old. Someone told me that those are
+                            the kinds of pictures you never look. Well, I don't agree.</p>
                         <span class="s_cell_btn"><a href="" class="s_cell_btn_a">Read more</a></span>
                     </div>
                 </div>
-            </div>         
+            </div>
         </section>
         <section class="preset">
             <div class="preset-gradient_wrap">
                 <div class="gradientPreset"></div>
-            <div class="presetWrap">
-                <div class="presetIntroWrap">
-                    <span class="presetIntroWrap__wave"></span>
-                    <h3 class="presetIntroWrap__h3">Preset Store</h3>
-                    <p class="presetIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla.</p>
-                </div> 
-                <div class="presetGridWrap">
-                    <div class="presetGridWrap__div1 p_cell">
-                        <div class="img_pr_cell"></div>
-                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 01</h4>
-                        <p class="pr_cell_p">The first volume is my go-to presets when shooting action sports. Just the right amount of contrast and highlights to make your photo (literally) pop!</p>
+                <div class="presetWrap">
+                    <div class="presetIntroWrap">
+                        <span class="presetIntroWrap__wave"></span>
+                        <h3 class="presetIntroWrap__h3">Preset Store</h3>
+                        <p class="presetIntroWrap__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare,
+                            eros dolor interdum nulla.</p>
                     </div>
-                    <div class="presetGridWrap__div2 p_cell">
-                        <div class="img_pr_cell"></div>
-                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 02</h4>
-                        <p class="pr_cell_p">Vol. 02 is dedicated solely to landscape photography. Pay attention to your exposure while out there and these presets will make your photos look great.</p>
+                    <div class="presetGridWrap">
+                        <div class="presetGridWrap__div1 p_cell">
+                            <div class="img_pr_cell"></div>
+                            <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 01</h4>
+                            <p class="pr_cell_p">The first volume is my go-to presets when shooting action sports. Just
+                                the right amount of contrast and highlights to make your photo (literally) pop!</p>
+                        </div>
+                        <div class="presetGridWrap__div2 p_cell">
+                            <div class="img_pr_cell"></div>
+                            <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 02</h4>
+                            <p class="pr_cell_p">Vol. 02 is dedicated solely to landscape photography. Pay attention to
+                                your exposure while out there and these presets will make your photos look great.</p>
+                        </div>
+                        <div class="presetGridWrap__div3 p_cell">
+                            <div class="img_pr_cell"></div>
+                            <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 03</h4>
+                            <p class="pr_cell_p">These are a collection of my most used wedding presets — use with
+                                caution as you'll end up loving wedding photography.</p>
+                        </div>
                     </div>
-                    <div class="presetGridWrap__div3 p_cell">
-                        <div class="img_pr_cell"></div>
-                        <h4 class="h4_pr_cell">Mirro Preset Pack Vol. 03</h4>
-                        <p class="pr_cell_p">These are a collection of my most used wedding presets — use with caution as you'll end up loving wedding photography.</p>
+                    <div class="presetLinkWrap">
+                        <div class="presetLinkWrap_btn">
+                            <span class="presetLinkWrap_span">
+                                <a href="#" class="preset__btn">Preset store</a>
+                            </span>
+                        </div>
                     </div>
                 </div>
-                <div class="presetLinkWrap">
-                    <div class="presetLinkWrap_btn">
-                        <span class="presetLinkWrap_span">
-                            <a href="#" class="preset__btn">Preset store</a>
-                        </span>
-                    </div>
-                </div>
-            </div>
             </div>
         </section>
         <section class="contact">
@@ -153,7 +177,7 @@
                             Contact
                         </a>
                     </span>
-                </div> 
+                </div>
             </div>
         </section>
     </main>
@@ -212,10 +236,11 @@
                 <div class="newsletter">
                     <ul class="newsletter_li">
                         <li><a class="ch_cl" href="#">Newsletter</a></li>
-                        <li><a href="#">Subscribe to my newsletter where I share news about upcoming printings and preset sales.</a></li>
+                        <li><a href="#">Subscribe to my newsletter where I share news about upcoming printings and
+                                preset sales.</a></li>
                     </ul>
                     <div class="newsletter_search_wrap">
-                        <form class="newsletter_search"  method="GET" action="submit.php"  target="_self">
+                        <form class="newsletter_search" method="GET" action="submit.php" target="_self">
                             <input type="email" class="email" id="email" name="email" placeholder="Email address">
                             <input type="submit" class="submit" value="Submit">
                         </form>
@@ -237,4 +262,5 @@
         </div>
     </footer>
 </body>
+
 </html>
