--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirro</title>
-    <link rel="shortcut icon" href="/img/logo_ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/logo_ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/Style.css">
 </head>
@@ -42,7 +42,7 @@
                 <div class="gradient_2"></div>
                 <div class="introWrap">
                     <div class="introRight">
-                        <img class="introRight_img" src="/img/James.png" alt="photographer">
+                        <img class="introRight_img" src="img/James.png" alt="photographer">
                     </div>
                     <div class="introLeft">
                         <h1 class="introLeft__h1">Hi, I'm James Mirro & I'm a photographer.</h1>
